--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,9 @@
 
 {% block content %}
 <h1 class="title">
-  Flask Login Example
+  Калькулятор ресурсов для космического корабля
 </h1>
-<h2 class="subtitle">
-  Easy authentication and authorization in Flask.
-</h2>
+<div>
+  
+</div>
 {% endblock %}
